<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mercury_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:textColor="@color/mercury_text_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvInstruction"
        android:textColor="@color/mercury_text_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/hint_up"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_link"
        android:inputType="textUri"
        android:padding="12dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnDownload"
        android:backgroundTint="@color/btn_state_colors"
        android:textColor="@color/mercury_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/action_download"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status_ready"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btnOpenHistory"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_history"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp" />

</LinearLayout>